# Compositor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Compositor.json  Compositor.jsonc  DefaultConfig.jsonc  Devcontainer.md  README.md  build.rs
.devcontainer/: devcontainer.json  pl10k.zsh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  rust-clippy.yml
ISSUE_TEMPLATE/: bug_report.md
resources/: avdanos-cursor-64.rgba  avdanos_cursor.rgba
src/: config_loader.rs  consts.rs  grabs.rs  handler.rs  main.rs  state.rs  winit.rs
src/compat/: mod.rs  xdg_base_dirs.rs
src/compositor/: drawing.rs  focus.rs  grabs.rs  handler.rs  init.rs  input.rs  mod.rs  render.rs  state.rs  winit.rs
src/compositor/backend/: mod.rs  udev.rs  winit.rs
src/compositor/backends/: mod.rs
src/compositor/backends/udev/: mod.rs
src/compositor/backends/winit/: mod.rs
src/compositor/components/: cursor.rs  mod.rs
src/compositor/components/cursor/: drawing.rs  mod.rs  state.rs
src/compositor/grabs/: move_grab.rs  resize_grab.rs
src/compositor/handlers/: compositor.rs  input.rs  mod.rs  output.rs  xdg.rs  xdg_shell.rs
src/compositor/input/: mod.rs
src/compositor/renderer/: mod.rs
src/compositor/shell/: mod.rs  x11.rs
src/compositor/shell/avwindow/: mod.rs
src/compositor/shell/grabs/: grab_move.rs  grab_resize.rs  mod.rs
src/compositor/shell/xdg/: decoration.rs  handlers.rs  mod.rs
src/compositor/state/: mod.rs  utils.rs
src/config/: config.rs  errors.rs  mod.rs  section.rs
src/config/sections/: keybinds.rs  mod.rs  section.rs
src/config/templating/: avvalue.rs  macro.rs  mod.rs
src/core/: config.rs  error.rs  mod.rs
src/core/keyboard/: avkeys.rs  mod.rs
src/macros/: Cargo.toml
src/macros/src/: avvalue.rs  delcaration.rs  lib.rs
src/utils/: logging.rs  mod.rs
src/wayland/: display.rs
