[package]

name          = "compositor"
description   = "Wayland compositor made for AvdanOS"
documentation = "https://docs.avdanos.com/"
homepage      = "https://avdanos.com/"
license       = "GPL-3.0"
version       = "0.0.1"
authors       = ["Zenails <zenailsc@gmail.com>", "Froxcey <froxcey@avdanos.com>", "Sammy <sammy99jsp@avdanos.com>"]
edition       = "2021"

[dependencies]

serde_json    = "1.0.104"
lazy_static   = "1.4.0"
json_comments = "0.2.1"
regex         = "1.9.1"
slog-term     = "2.9.0"
bitflags      = "2.3.3"
colored       = "2.0.4"
xcursor       = "0.3.4"
thiserror     = "1.0.44"
rand          = "0.8.5"
xkbcommon     = "0.5.1"
libc          = "0.2.147"

[dependencies.compositor-macros]

path = "./src/macros"

[dependencies.json-tree]

git = "https://github.com/Sammy99jsp/json-tree.git"
features = ["jsonc"]

[dependencies.smithay]

git      = "https://github.com/smithay/smithay.git"
rev      = "6253576c"
features = ["desktop", "default", "backend_egl", "use_system_lib"]

[dependencies.serde]

version  = "1.0.180"
features = ["derive"]

[dependencies.slog]

version  = "2.7.0"
features = ["max_level_trace", "release_max_level_warn"]

